test/types/records/ferguson/default-compare-mixed-insn.4.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:22: error: Cannot assign to R(int(32)) from R(int(64))
